--- a/MyServer/appsettings.Development.json
+++ b/MyServer/appsettings.Development.json
@@ -13,5 +13,10 @@
     "ExpiresInMinutes": 5,
     "Issuer": "http://localhost:5063",
     "ClientUrl": "http://localhost:4200/"
+  },
+
+  "Email": {
+    "ConfirmEmailPath": "account/confirm-email",
+    "ResetPasswordPath": "account/reset-password",
   }
 }
