--- a/MyServer/appsettings.Development.json
+++ b/MyServer/appsettings.Development.json
@@ -5,11 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-FFBS075U;Database=AngularAppDb;Trusted_connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
-  },
   "JWT": {
-    "Key": "U9Q4juxs7u8xdSimY5rKMlrPFEsbvsVZ",
     "ExpiresInMinutes": 5,
     "Issuer": "http://localhost:5063",
     "ClientUrl": "http://localhost:4200/"
@@ -17,6 +13,6 @@
 
   "Email": {
     "ConfirmEmailPath": "account/confirm-email",
-    "ResetPasswordPath": "account/reset-password",
+    "ResetPasswordPath": "account/reset-password"
   }
 }
